<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage">

    <!-- Gray Rectangle -->

    <View
        android:id="@+id/gray_rectangle"
        android:layout_width="0dp"
        android:layout_height="372dp"
        android:background="@drawable/gray_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Blue Rectangle -->
    <View
        android:id="@+id/blue_rectangle"
        android:layout_width="308dp"
        android:layout_height="570dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gray_rectangle" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="232dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="14sp"
        android:text="@string/signup_page"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gray_rectangle" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:text="@string/signup_page1"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/blue_rectangle"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toTopOf="@+id/blue_rectangle" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondary"
        android:ems="10"
        android:inputType="text"
        android:text="@string/signup_page7"
        android:textColor="@color/placeholder"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondary"
        android:ems="10"
        android:inputType="text"
        android:text="@string/signup_page8"
        android:textColor="@color/placeholder"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/accent"
        android:text="@string/signup_page6"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/blue_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/blue_rectangle"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/signup_page2"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/signup_page3"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/signup_page4"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="@color/secondary"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/signup_page5"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@color/secondary"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>