<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePage">

    <!-- Gray Rectangle -->
    <View
        android:id="@+id/gray_rectangle"
        android:layout_width="416dp"
        android:layout_height="372dp"
        android:background="@drawable/gray_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Blue Rectangle -->
    <View
        android:id="@+id/blue_rectangle"
        android:layout_width="414dp"
        android:layout_height="179dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gray_rectangle" />

    <!-- Title TextView -->
    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/profile_page"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toTopOf="@+id/blue_rectangle" />

    <!-- Icon ImageViews -->
    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/directions_bus" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/tableicon" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/persondark" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="130dp"
        android:layout_height="94dp"
        app:layout_constraintBottom_toBottomOf="@+id/blue_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/gray_rectangle"
        app:layout_constraintTop_toTopOf="@+id/blue_rectangle"
        app:layout_constraintVertical_bias="0.835"
        app:srcCompat="@drawable/untitled_design__1_" />

    <!-- White Rectangle with TextViews -->
    <View
        android:id="@+id/white_rectangle"
        android:layout_width="334dp"
        android:layout_height="271dp"
        android:layout_margin="16dp"
        android:background="@drawable/white_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_rectangle"
        app:layout_constraintVertical_bias="0.266" />

    <!-- LinearLayout for vertically aligned TextViews -->

    <!-- Buttons aligned horizontally -->
    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="165dp"
        android:layout_height="235dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/white_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/white_rectangle"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="@+id/white_rectangle"
        app:layout_constraintTop_toTopOf="@+id/white_rectangle"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_page3"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_page4"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_page5"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_page6"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_page7"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_page8"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_page2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:layout_constraintVertical_bias="0.766"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_page1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:layout_constraintVertical_bias="0.766"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>
