<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <View
        android:id="@+id/gray_rectangle"
        android:layout_width="416dp"
        android:layout_height="372dp"
        android:background="@drawable/gray_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Blue Rectangle -->
    <View
        android:id="@+id/blue_rectangle"
        android:layout_width="414dp"
        android:layout_height="179dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/blue_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gray_rectangle" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/home_page"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/blue_rectangle"
        app:layout_constraintTop_toTopOf="@+id/blue_rectangle" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gray_rectangle"
        app:srcCompat="@drawable/mapimage" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/housedark" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/directions_bus" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/tableicon" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/personicon" />

    <View
        android:id="@+id/white_rectangle"
        android:layout_width="287dp"
        android:layout_height="192dp"
        android:layout_margin="16dp"
        android:background="@drawable/white_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blue_rectangle" />

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="229dp"
        android:layout_height="204dp"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/white_rectangle"
        app:layout_constraintEnd_toEndOf="@+id/white_rectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/white_rectangle"
        app:layout_constraintTop_toTopOf="@+id/white_rectangle"
        app:layout_constraintVertical_bias="0.551">

        <TextView
            android:id="@+id/textView31"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/home_page1"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/home_page2"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tracker_page1"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tracker_page2"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/tracker_page3"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="77dp"
        android:layout_height="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/blue_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/untitled_design__1_" />


</androidx.constraintlayout.widget.ConstraintLayout>